==================== 2.16.0 ====================

2006-09-04  Vincent Untz  <vuntz@gnome.org>

	* panel-ditem-editor.c: (type_combo_changed): don't update the key
	file when setting up the combo ui.
	Workaround for bug #353095. A proper fix will go in later.

==================== 2.15.92 ====================

2006-08-18  Vincent Untz  <vuntz@gnome.org>

	* panel-recent.c: (recent_documents_clear_cb): reset
	clear_recent_dialog to NULL when the dialog is destroyed
	Caught by Matthias Clasen <mclasen@redhat.com>

2006-08-18  Vincent Untz  <vuntz@gnome.org>

	Don't throw a critical warning if the icon can't be found in the icon
	theme.
	Patch by Jens Granseuer <jensgr@gmx.net>
	Fix bug #351661.

	* panel-ditem-editor.c: (panel_ditem_editor_sync_display): test if the
	returned filename is NULL

2006-08-15  Vincent Untz  <vuntz@gnome.org>

	* panel-ditem-editor.c: (panel_ditem_editor_connect_signals): change
	order of callbacks, so we update the keyfile data before sending a
	"changed" signal

2006-08-14  Vincent Untz  <vuntz@gnome.org>

	* panel-recent.c: (panel_recent_append_documents_menu): use the size
	of the manager to determine initial sensitivity, instead of using a
	value filled with random data.
	Should fix bug #351326

2006-08-10  Vincent Untz  <vuntz@gnome.org>

	* panel-properties-dialog.c: don't forget properly setting up the
	dialog!
	* panel-properties-dialog.glade: change a name

2006-08-10  Vincent Untz  <vuntz@gnome.org>

	* panel-applet-frame.c: (panel_applet_frame_finalize): disconnect from
	the connection broken signal before doing anything else.
	Fix crash when quitting and an applet is crashing.

2006-08-09  Vincent Untz  <vuntz@gnome.org>

	* panel-context-menu.c: (panel_context_menu_show_about_dialog): update
	my email address
	(panel_context_menu_remove_panel): renamed to...
	(panel_context_menu_delete_panel): ... and use the toplevel from the
	argument
	(panel_context_menu_setup_remove_panel_item): renamed to...