@@ -1,3 +1,8 @@
+2006-09-05  Ryan Lortie  <desrt@desrt.ca>
+
+	* gilded-star.c: switch to using a ButtonWidget rather than a
+	GtkImage for the icon shown when not connected.
+
 ==================== 2.16.0 ====================
 
 2006-09-04  Vincent Untz  <vuntz@gnome.org>
